syntax = "proto3";

package stream;

option go_package = "/gen/stream";

service AudioStream {
    rpc StreamAudio (AudioStreamRequest) returns (stream AudioStreamChunk);
}

message AudioStreamRequest {
    string file_name = 1;
    string session_id = 2;
}

message AudioStreamChunk {
    bytes data = 1;
    int32 sequence = 2;
}
